Avoid recomputing multiple times the union of topRecords and bottomRecords. Remove streams from barcode consensus computation.